--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
+    "acorn": "^6.0.4",
     "acorn-dynamic-import": "^4.0.0",
     "core-js": "^2.5.4",
     "fabric": "^2.4.3",
+	"firebase": "^2.4.2",
     "hammerjs": "^2.0.8",
     "jquery": "^3.3.1",
     "materialize-css": "^1.0.0",
