--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~7.0.0",
+    "@angular/animations": "^7.0.3",
+    "@angular/cdk": "^7.0.3",
     "@angular/common": "~7.0.0",
     "@angular/compiler": "~7.0.0",
     "@angular/core": "~7.0.0",
     "@angular/fire": "^5.1.0",
     "@angular/forms": "~7.0.0",
     "@angular/http": "~7.0.0",
+    "@angular/material": "^7.0.3",
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
@@ -25,7 +27,7 @@
     "acorn-dynamic-import": "^4.0.0",
     "core-js": "^2.5.4",
     "fabric": "^2.4.3",
-	"firebase": "^2.4.2",
+    "firebase": "^2.4.2",
     "hammerjs": "^2.0.8",
     "jquery": "^3.3.1",
     "materialize-css": "^1.0.0",
