--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
     "acorn": "^6.0.4",
     "acorn-dynamic-import": "^4.0.0",
     "core-js": "^2.5.4",
+    "express": "^4.16.4",
     "fabric": "^2.4.3",
     "firebase": "^2.4.2",
     "hammerjs": "^2.0.8",
     "jquery": "^3.3.1",
     "materialize-css": "^1.0.0",
+    "path": "^0.12.7",
     "popper": "^1.0.1",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
