--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "core-js": "^2.5.4",
     "express": "^4.16.4",
     "fabric": "^2.4.3",
-    "firebase": "^2.4.2",
+    "firebase": "4.8.0",
     "hammerjs": "^2.0.8",
     "materialize-css": "^1.0.0",
     "path": "^0.12.7",
