--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "node server.js",
+    "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -59,7 +59,7 @@
     "typescript": "~3.1.1"
   },  
   "engines": {
-    "node": "11.1.0",
-    "npm": "6.4.1"
+    "node": "6.11.0",
+    "npm": "3.10.10"
   }
 }
