--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "firebase": "5.5.8",
     "hammerjs": "^2.0.8",
     "materialize-css": "^1.0.0",
+    "node-pre-gyp": "^0.12.0",
     "path": "^0.12.7",
     "rxjs": "~6.3.3",
     "typescript": "~3.1.1",
